# vk_search_groups

./: .env  .flake8  .gitignore  README.md  docker-compose.yml  entrypoint.sh  mypy.ini  mypy_django.ini  pyproject.toml
.github/workflows/: code_qual.yml  tests.yaml
docker/python/: Dockerfile
vksearch/: manage.py  tokens.txt
vksearch/siteauth/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
vksearch/siteauth/migrations/: 0001_initial.py
vksearch/siteauth/tests/: test_siteuser_login.py  test_siteuser_register.py
vksearch/static/css/: main.css
vksearch/templates/: base.html  home.html  paginator.html
vksearch/vkgroup/: apps.py  forms.py  models.py  tasks.py  urls.py  views.py  vkapi_service.py
vksearch/vkgroup/migrations/: 0001_initial.py  0002_alter_community_description_alter_community_members_and_more.py  0003_alter_community_type_alter_communitytype_name.py  0004_alter_communitytype_name.py  0005_alter_community_description.py  0006_agerange_country_audience_community_community_age_vk_and_more.py  0007_alter_audienceprofile_sex_alter_community_age_vk.py  0008_alter_community_name_alter_community_site.py  0009_alter_community_site.py  0010_alter_community_members_alter_community_name.py  0011_alter_community_members.py  0012_alter_community_age_vk.py  0013_alter_community_status.py  0014_alter_community_deactivated_and_more.py  0015_alter_community_name_alter_community_site_and_more.py  0016_alter_community_description_alter_community_name_and_more.py  (+9 more)
vksearch/vksearch/: asgi.py  celery.py  settings.py  urls.py  view.py  wsgi.py
(+3 files in other folders)
