[tool.poetry]
name= "PythonProfessional.2022-05.project"
version = "0.1.0"
description = ""
authors = ["Inna Sorina <sorina-inna@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.2"
python-dotenv = "^0.21.0"
django-debug-toolbar = "^3.7.0"
psycopg2-binary = "^2.9.5"
requests = "^2.28.1"
celery = "5.2.3"
Pillow = "^9.3.0"
flower = "^1.2.0"
eventlet = "^0.33.1"
black = "^22.10.0"
mypy = "^0.991"
flake8 = "5.0.4"
django-stubs = "^1.13.0"
types-requests = "^2.28.11"
mypy-extensions = "^0.4.3"
djangorestframework-stubs = "^1.8.0"
celery-types = "^0.14.0"
isort = "^5.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
